# chat-haskell-backend

./: .ghci  .hspec-failures  README.md  docker-compose.yml  haskell-server.cabal  stack.yaml  test.json
app/: Main.hs
blackbox-tests/: Client.hs  Main.hs
scripts/: deploy.sh
src/: Actions.hs  Main.hs  Messages.hs  Responses.hs  Server.hs
tests/: ActionsSpec.hs  Doctests.hs  Main.hs  ResponsesSpec.hs  Spec.hs
tests/results/: action-user.json  response-message.json
