name:                haskell-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Actions, Responses, Server
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , text
                     , aeson
                     , aeson-pretty
                     , vector
                     , bytestring
                     , unordered-containers
                     , text-show

executable run-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-server

executable run-client
  hs-source-dirs:      client
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-server
                     , mtl
                     , websockets
                     , network
                     , text

executable blackbox-tests
  hs-source-dirs:      blackbox-tests
  main-is:             Main.hs
  other-modules:       Client
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-server
                     , mtl
                     , websockets
                     , network
                     , text
                     , aeson-pretty

test-suite haskell-server-test
  type: exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is: Spec.hs
  other-modules:       ActionsSpec
  build-depends:       base >= 4.7 && < 5
                     , haskell-server
                     , hspec
                     , aeson
                     , aeson-pretty
                     , text
                     , bytestring
  default-language:    Haskell2010
